 <project>
  <modelVersion>4.0.0</modelVersion>

     <parent>
         <groupId>com.jamonapi</groupId>
         <artifactId>jamon-parent</artifactId>
         <version>2.85</version>
     </parent>

  <artifactId>jamon</artifactId>
  <packaging>jar</packaging>
  <name>JAMon Core</name>

  <build>
    <finalName>jamon-${project.version}</finalName>
      <!-- generate javadoc and sources jars -->
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>${maven.javadoc.plugin.version}</version>
              <!-- The following is needed for jdk 1.8 javadocs generation or failure. -->
              <configuration>
                  <additionalparam>-Xdoclint:none</additionalparam>
              </configuration>

          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-source-plugin</artifactId>
              <version>${maven.source.plugin.version}</version>
              <executions>
                  <execution>
                      <id>attach-sources</id>
                      <goals>
                          <goal>jar</goal>
                      </goals>
                  </execution>
              </executions>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>${maven.compiler.plugin.version}</version>
              <configuration>
                  <source>8</source>
                  <target>8</target>
              </configuration>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>3.2.5</version>
              <configuration>
                  <argLine>
                      --add-modules java.se
                      --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                      --add-opens java.base/java.lang=ALL-UNNAMED
                      --add-opens java.base/java.nio=ALL-UNNAMED
                      --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                      --add-opens java.management/sun.management=ALL-UNNAMED
                      --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                      --add-opens java.base/java.util=ALL-UNNAMED
                      --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                  </argLine>
              </configuration>
          </plugin>
      </plugins>
  </build>

  <dependencies>

      <dependency>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-server</artifactId>
          <version>${jetty9.version}</version>
          <scope>provided</scope>
          <exclusions>
            <exclusion>
              <groupId>org.eclipse.jetty.toolchain</groupId>
              <artifactId>jetty-servlet-api</artifactId>
            </exclusion>
          </exclusions>
      </dependency>
      
      <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>javax.servlet-api</artifactId>
          <version>3.1.0</version>
          <scope>provided</scope>
      </dependency>

      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
          <version>${commons.version}</version>
          <scope>test</scope>
      </dependency>


      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-slf4j-impl</artifactId>
          <version>${log4j.version}</version>
          <scope>test</scope>
      </dependency>

  </dependencies>

  <profiles>
    <!-- Java < 17: Exclude Hazelcast source code from compilation -->
    <profile>
      <id>exclude-hazelcast</id>
      <activation>
        <jdk>(,17)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.13.0</version>
            <configuration>
              <source>8</source>
              <target>8</target>
              <excludes>
                <exclude>**/distributed/Hazelcast*.java</exclude>
              </excludes>
              <testExcludes>
                <exclude>**/distributed/*Hazelcast*.java</exclude>
                <exclude>**/distributed/JamonDataPersisterFactoryTest.java</exclude>
                <exclude>**/JamonPropertiesLoaderTest.java</exclude>
              </testExcludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    
    <!-- Java 17+: Include Hazelcast dependency and compile all sources -->
    <profile>
      <id>hazelcast-support</id>
      <activation>
        <jdk>[17,)</jdk>
      </activation>
      <dependencies>
        <dependency>
          <groupId>com.hazelcast</groupId>
          <artifactId>hazelcast</artifactId>
          <version>${hazelcast.version}</version>
        </dependency>
      </dependencies>
    </profile>
  </profiles>

 </project>